--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "news-scrapper",
+  "name": "mongoose_skeleton",
   "version": "1.0.0",
-  "description": "Scaps information from news paper website",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sdanner08/News-Scrapper.git"
-  },
-  "author": "Shane Danner",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sdanner08/News-Scrapper/issues"
-  },
-  "homepage": "https://github.com/Sdanner08/News-Scrapper#readme",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mongojs": "^2.6.0",
     "mongoose": "^5.0.11",
     "morgan": "^1.9.0"
   }
